# pyspectrafuse

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pyspectrafuse-containers.yml  tests.yml
pyspectrafuse/: maracluster_dat.py  pyspectrafuse.py  pyspectrafuse_cli.py
pyspectrafuse/cluster_parquet_combine/: cluster_res_handler.py  combine_cluster_and_parquet.py
pyspectrafuse/commands/: build_cluster_db.py  cluster2parquet.py  convert_msnet_to_qpx.py  incremental.py  mzml_noid.py  parquet2dat.py  quantmsio2mgf.py  spectrum2msp.py
pyspectrafuse/common/: constant.py  duckdb_ops.py  msp_utils.py  mzml_dat.py  noid_cluster_db.py  noid_msp_utils.py  noid_quality.py  parquet_utils.py  qpx_metadata.py  schemas.py  sdrf_utils.py
pyspectrafuse/consensus_strategy/: average_spectrum_strategy.py  best_spetrum_strategy.py  binning_strategy.py  consensus_strategy_base.py  metrics.py  most_similar_strategy.py  noid_consensus_strategy.py
pyspectrafuse/incremental/: merge_results.py  representative_dat.py  representative_mgf.py  resolve_clusters.py  resolve_clusters_dat.py
pyspectrafuse/mgf_convert/: parquet2mgf.py
scripts/: build_docker.sh  build_singularity.sh
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_consensus_strategy.py  test_incremental.py  test_integration_ftp.py  test_msp_utils.py  test_mzml_dat.py  test_noid_db.py  test_noid_quality.py  test_parquet_utils.py  test_sdrf_utils.py
