[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyspectrafuse"
version = "0.0.4"
description = "Python CLI for spectral clustering and consensus library generation in mass spectrometry proteomics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "BigBio Team", email = "ypriverol@gmail.com"}
]
keywords = ["python", "multiomics", "proteomics", "quantms", "reanalysis", "spectral-clustering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "Click>=8.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pyarrow>=5.0.0",
    "pyteomics>=4.5.0",
    "spectrum_utils>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/bigbio/pyspectrafuse"
Repository = "https://github.com/bigbio/pyspectrafuse"
Issues = "https://github.com/bigbio/pyspectrafuse/issues"

[project.scripts]
pyspectrafuse = "pyspectrafuse.pyspectrafuse:main"

[tool.hatch.build.targets.wheel]
packages = ["pyspectrafuse"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
